kubernetes/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: development
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  annotations:
    # Annotations cho NGINX Ingress Controller (tùy chọn, có thể bỏ nếu dùng Ingress Controller khác)
    nginx.ingress.kubernetes.io/cors-allow-headers: >-
      DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,connect-protocol-version
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - music.dev.huyvd.xyz
      secretName: huyvd-xyz-tls
  rules:
  - host: music.dev.huyvd.xyz
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: navidrome
            port:
              number: 80
